force-app/main/default/objects/CIMarginCalcInputs__c/CIMarginCalcInputs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>various calculation inputs for C&amp;I margin determination</description>
    <label>C&amp;I Margin Calculation Inputs</label>
</CustomObject>