force-app/main/default/objects/CIMarginCalcInputs__c/fields/ESupply_Margin__c.field-meta.xml
<CustomField>
    <fullName>ESupply_Margin__c</fullName>
    <label>ESupply Margin</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>