force-app/main/default/objects/CIMarginCalcInputs__c/fields/GSavings_Base_Margin__c.field-meta.xml
<CustomField>
    <fullName>GSavings_Base_Margin__c</fullName>
    <defaultValue>0.55</defaultValue>
    <description>base margin for GSavings before discount and before consultant fees</description>
    <label>GSavings Base Margin</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>