force-app/main/default/objects/CIMarginCalcInputs__c/fields/GSupply_Volumetric_Cost__c.field-meta.xml
<CustomField>
    <fullName>GSupply_Volumetric_Cost__c</fullName>
    <defaultValue>0.27</defaultValue>
    <description>cost component of GSupply volumetric fee</description>
    <label>GSupply Volumetric Cost</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>