force-app/main/default/objects/CIMarginCalcInputs__c/fields/GValue_Margin__c.field-meta.xml
<CustomField>
    <fullName>GValue_Margin__c</fullName>
    <defaultValue>0.01</defaultValue>
    <description>margin for GValue</description>
    <label>GValue Margin</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>