force-app/main/default/objects/CIMarginCalcInputs__c/fields/Manage_Margin__c.field-meta.xml
<CustomField>
    <fullName>Manage_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true means margins will be processed during contract activation and roll</description>
    <inlineHelpText>true means margins will be processed during contract activation and roll</inlineHelpText>
    <label>Manage Margin</label>
    <type>Checkbox</type>
</CustomField>